--- a/render.yaml
+++ b/render.yaml
@@ -4,7 +4,7 @@ services:
     env: node
     plan: free
     rootDir: .
-    buildCommand: npm --prefix client install && npm --prefix client run build && npm --prefix server install
+    buildCommand: npm --prefix client ci && npm --prefix client run build && npm --prefix server ci
     startCommand: npm --prefix server start
     healthCheckPath: /healthz
     autoDeploy: true
